--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">FaceCheck</string>
     <string name="title_activity_main">FaceCheck</string>
-    <string name="package_name">com.facecheck.app</string>
-    <string name="custom_url_scheme">com.facecheck.app</string>
+    <string name="package_name">com.FaceCheck.app</string>
+    <string name="custom_url_scheme">com.FaceCheck.app</string>
 </resources>
